--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -14,6 +14,8 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    server_tokens   off;
+
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
